
	* doc/sdccman.lyx:
	  Update documentation on long long support.
	* device/lib/wctomb.c,
	  support/regression/tests/wchar.c:
	  Fix wctomb() error handling wrt. invalid surrogate codepoints.
	* device/lib/wcrtomb.c,
	  support/regression/tests/wchar.c:
	  Fix wcrtomb() errno handling.
	* device/lib/mbrtowc.c,
	  device/lib/mbtowc.c:
	  Improve mbrtowc(), mbtowc() error handling.

2018-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h,
	  support/regression/tests/constantRange.c:
	  Fix intmax_t, uintmax_t limit macros.

2018-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdint.h,
	  support/regression/tests/wchar.c:
	  Fix wchar_t, wint_t limit macros.

2018-04-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/wchar.c:
	  A bit of additional UTF-16 and UTF-32 support testing.

2018-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix reads from unallocated memory.
	* src/stm8/gen.c:
	  Fix bug #2743.

2018-04-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  Fix read of unitialized value in initialization of zero-length bit-field.

2018-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.ac:
	  Use C11 instead of ms-extensions to get support for anonymous struct.

2018-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asout.c (outrw): enable emit 24-bit relocation data for stm8
	* src/stm8/main.c (get_model): fixed warning

2018-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2124.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-930702-1.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c,
	  support/regression/tests/z88dk.c:
	  Workaround for 24-bit symbol assembler issue.
